--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-pysqlite3-binary
+streamlit
 langchain
-chromadb
-unstructured
-sentence-transformers
-faiss-cpu
-tiktoken
 openai
-pypdf
-loguru
-docx2txt
+json
+pandas
+openai_api
